--- a/main.tex
+++ b/main.tex
@@ -48,6 +48,13 @@
 }
 
 
+\addtobeamertemplate{navigation symbols}{}{%
+    \usebeamerfont{footline}%
+    \usebeamercolor[fg]{footline}%
+    \hspace{1em}%
+    \insertframenumber/\inserttotalframenumber
+}
+
 \newcommand{\titlepageWhite}{ % % This block is for the white background title page
 \setbeamertemplate{footline}
   {\hbox{%
@@ -77,8 +84,8 @@
 }
 
 
-\title[IISWC 2018 Presentation]{Characterising Across Stack Optimisations for Convolutional Neural Networks}
-\author{J. Turner, J. Cano, V. Radu, E. J. Crowley, M. O’Boyle, A. Storkey}
+\title[IISWC 2018 Presentation]{Characterising Across-Stack Optimisations for Convolutional Neural Networks}
+\author{\underline{J. Turner}, J. Cano, V. Radu, E. J. Crowley, M. O’Boyle, A. Storkey}
 \institute{University of Edinburgh}
 \date{}
 
@@ -95,52 +102,65 @@
 %  \tableofcontents
 %\end{frame}
 
-\section{Introduction}
-
-\begin{frame}{Motivation}
-
-\begin{itemize}
-  \item We \textit{want} to be able to deploy DL on edge devices because ... but we \textit{can't} because ...
-\end{itemize}
-
-\vskip 1cm
-
+\begin{frame}{Thanks}
+    \begin{itemize}
+        \item Bonseyes
+        \item EPSRC (PPar)
+    \end{itemize}
 \end{frame}
 
 
-\begin{frame}{Why Neural Networks?}
+\section{Introduction}
+
+\begin{frame}{Neural Networks are large, and growing}
+
+\begin{columns}
+
+\column{0.5\textwidth}
 
 \begin{figure}
     \centering
-    \includegraphics[width=\linewidth]{images/imagenet_results.pdf}
+    \includegraphics[width=5cm]{images/flop-growth.pdf}
+    \label{fig:flop-growth}
+    \caption{ImageNet winners}
 \end{figure}
+
+\column{0.5\textwidth}
+
+
+\vspace{0.5cm}
+\begin{itemize}
+    \item High memory footprint
+    \item Slow inference time 
+    \item Large energy requirement
+\end{itemize}
+
+\end{columns}
 
 
 \end{frame}
+
+
+%\begin{frame}{Why Neural Networks?}
+
+%\begin{figure}
+%    \centering
+%    \includegraphics[width=\linewidth]{images/imagenet_results.pdf}
+%\end{figure}
+
+
+%\end{frame}
 
 
 \section{Challenges for Deployment}
 
 \subsection{Large Models}
 
-\begin{frame}{Deployment Challenges}
+
+\begin{frame}{Speedup does not align with expectations}
 
 \begin{itemize}
-	\item Models are too big for edge devices 
-    \item Bottleneck in data movement
-    \item Accessing off chip DRAM is expensive in terms of time and energy
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}{Parameter Redundancy}
-
-
-
-\begin{itemize}
-	\item Lucky for us... we know that the vast majority of parameters are redundant 
-    \item Many different techniques for compressing networks but the effects are nontrivial
-    \item MACs are not a perfect proxy for inference time
+	\item In state-of-the-art networks, up to \textbf{90\%} of weights are redundant
 \end{itemize}
 
 \begin{figure}
@@ -153,15 +173,25 @@
 \end{frame}
 
 
-\begin{frame}{Contributions}
-    
-    \begin{itemize}
-        \item Introduction of the \textit{Deep Learning Inference Stack}
-        \item Characterisation of various neural network acceleration methods on different hardware
-        \item Open source minimal implementations of common neural networks for benchmarking on embedded devices\footnote{https://github.com/jack-willturner/characterising-neural-compression}
-    \end{itemize}
-    
+\begin{frame}{Different hardware demands different compression}
+
+\begin{figure}
+    \centering
+    \includegraphics{images/pareto_efficiency.pdf}
+\end{figure}
+
+[DPP-Net]
 \end{frame}
+
+
+\begin{frame}{The Deep Learning Inference Stack}
+\begin{figure}
+    \centering
+    \includegraphics[width=\linewidth]{images/inference-stack.pdf}
+    \caption{The Deep Learning Inference Stack}
+\end{figure}
+\end{frame}
+
 
 
 \section{Background}
@@ -196,11 +226,6 @@
 
 %\end{frame}
 
-\begin{frame}{Background: Convolution Neurons}
-\centering
-\animategraphics[loop,controls,width=0.6\linewidth]{1}{images/arbitrary_padding_no_strides_0}{0}{3}
-\end{frame}
-
 %\begin{frame}{Background: Layers}
 
 %\begin{figure}
@@ -210,14 +235,26 @@
 %\end{frame}
 
 
-\begin{frame}{Background: Neural Networks}
+%\begin{frame}{Background: Neural Networks}
 
-\begin{figure}
-    \centering
-    \includegraphics[width=0.6\linewidth]{images/neural_network.pdf}
-\end{figure}
-\end{frame}
+%\begin{figure}
+%    \centering
+%    \includegraphics[width=0.6\linewidth]{images/neural_network.pdf}
+%\end{figure}
+%\end{frame}
 
+
+%\begin{frame}{Background: Convolution Neurons}
+%\centering
+%\animategraphics[loop,controls,width=0.6\linewidth]{1}{images/arbitrary_padding_no_strides_0}{0}{3}
+
+%\begin{figure}
+%    \centering
+%    \includegraphics[width=0.6\linewidth]{images/arbitrary_padding_no_strides_01.pdf}
+%    \label{fig:conv2d}
+%\end{figure}
+
+%\end{frame}
 
 
 \begin{frame}{Background: Weight Pruning}
@@ -268,7 +305,6 @@
 
 \end{frame}
 
-
 \section{Inference Stack}
 
 {
@@ -279,13 +315,12 @@
 \end{frame}
 }
 
-\begin{frame}{The Deep Learning Inference Stack}
-\begin{figure}
-    \centering
-    \includegraphics[width=\linewidth]{images/inference-stack.pdf}
-    \caption{The Deep Learning Inference Stack}
-    \label{fig:inference-stack}
-\end{figure}
+
+
+\begin{frame}{CIFAR-10}
+
+Picture / description of CIFAR-10 will go here.
+
 \end{frame}
 
 
@@ -304,16 +339,17 @@
 
 \textbf{Neural Network Models}
 
-\begin{itemize}
-    \item Number of layers
-    \item Number of neurons in each layer
-    \item Operation each neuron performs
-\end{itemize}
 
-\begin{figure}
+\begin{table}[]
     \centering
-    \includegraphics[width=5.5cm]{images/neural_network.pdf}
-\end{figure}
+    \begin{tabular}{c|c|c}
+        Model & Accuracy & Weight size \\
+        \hline
+        VGG-16 & 92.0\% & 309.1 MB \\
+        MobileNet & 91.5\% & \textbf{66.3 MB}\\
+        ResNet-18 & \textbf{94.2\%} & 233.8 MB \\
+    \end{tabular}
+\end{table}
 
 \end{columns}
 
@@ -322,36 +358,38 @@
 
 \definecolor{bg}{rgb}{0.95,0.95,0.95}
 
-\begin{frame}{Layer 1: Neural Networks}
-\vspace{0.2cm}
+%\begin{frame}{Layer 1: Neural Networks}
+%\vspace{0.2cm}
 
-\inputminted[bgcolor=bg, fontfamily=cmss]{python}{images/mini_model.py}
+%\inputminted[bgcolor=bg, fontfamily=cmss]{python}{images/mini_model.py}
 
-\begin{figure}
-    \centering
-    \vspace{-1cm}
-    \includegraphics[width=10cm]{images/lgoos.pdf}
-\end{figure}
-\end{frame}
-
-
-\begin{frame}{Layer 1: Neural Networks}
-\vspace{0.2cm}
-
-\begin{figure}
-    \centering
-    \includegraphics[width=0.8\linewidth]{images/vgg.pdf}
-    \caption{VGG-16}
-\end{figure}
+%\begin{figure}
+%    \centering
+%    \vspace{-1cm}
+%    \includegraphics[width=10cm]{images/lgoos.pdf}
+%\end{figure}
+%\end{frame}
 
 
-\begin{figure}
-    \centering
-    \includegraphics[width=0.8\linewidth]{images/resnet.pdf}
-    \caption{ResNet-32}
-\end{figure}
+%\begin{frame}{Layer 1: Neural Networks}
+%\vspace{0.2cm}
 
-\end{frame}
+%\begin{figure}
+%    \centering
+%    \includegraphics[width=0.8\linewidth]{images/vgg.pdf}
+%    \caption{VGG-16}
+%\end{figure}
+
+
+%\begin{figure}
+%    \centering
+%    \includegraphics[width=0.8\linewidth]{images/resnet.pdf}
+%    \caption{ResNet-18}
+%\end{figure}
+
+%{\color{red} MobileNet figure goes here}
+
+%\end{frame}
 
 
 \begin{frame}{Layer 2: Compression Techniques}
@@ -403,16 +441,17 @@ We consider representatives from three different classes of compression techniqu
     
 {\large\textbf{General Idea}}
 \begin{itemize}
-    \item Expand the error function into a Taylor series
-    \item Take the second derivative wrt. error (i.e. how much removing neuron $n$ will affect error $e$)
+    \item Use second-order Taylor expansion of error function to estimate effect of removing neuron \textit{n}
     \item Weight with a FLOP penalty $\beta$ to bias towards removing expensive neurons
     \item Iteratively remove neurons and retrain
 \end{itemize}
 
-If we are optimising the parameters $\theta$ for some error function $\mathcal{L}$, then removing parameter $\theta_{k}$ will change the error by:
-\begin{equation}
-    \mathcal{L}(\theta - \theta_{ke_{k}}) - \mathcal{L}(\theta) = -g_{k}\theta_{k} + \frac{1}{2}H_{kk}\theta^2_{k}
-\end{equation}
+%If we are optimising the parameters $\theta$ for some error function $\mathcal{L}$, then removing parameter $\theta_{k}$ will change the error by:
+%\begin{equation}
+%    \mathcal{L}(\theta - \theta_{ke_{k}}) - \mathcal{L}(\theta) = -g_{k}\theta_{k} + \frac{1}{2}H_{kk}\theta^2_{k}
+%\end{equation}
+
+\vspace{2cm}
 
 {\footnotesize [Theis et. al, 2018. Faster gaze prediction with dense networks and Fisher pruning.]}
     
@@ -531,7 +570,7 @@ When the matrices are very sparse, we may wish to use a sparse representation fo
 \textbf{OpenMP}
 \begin{itemize}
     \item CPU parallelisation of direct convolution 
-    \item Something detailed about how OpenMP handles parallelisation
+    \item Code snippet w. pragmas will go here
 \end{itemize}
 
 \end{columns}
@@ -555,8 +594,7 @@ When the matrices are very sparse, we may wish to use a sparse representation fo
 
 \textbf{OpenCL}
 \begin{itemize}
-    \item Tile size
-    \item Register blocking 
+    \item Hand tuned work groups and tiling
     \item CLBlast Autotuning 
 \end{itemize}
 
@@ -580,9 +618,8 @@ When the matrices are very sparse, we may wish to use a sparse representation fo
 \column{0.7\textwidth}
 
 \begin{itemize}
-    \item CPU
-    \item GPU
-    \item Typical embedded device setup
+    \item Intel Core i7 (4 cores)
+    \item Odroid-XU4 (ARM big.LITTLE CPU (8 cores) + Mali T628 GPU (6 cores)
 \end{itemize}
 \end{columns}
 
@@ -602,63 +639,41 @@ When the matrices are very sparse, we may wish to use a sparse representation fo
 \end{frame}
 }
 
-\begin{frame}{Experiments}
+\begin{frame}{Impact of Compression on Accuracy}
 
-First experiment: compression vs. accuracy.
-\vspace{0.5cm}
 \begin{itemize}
     \item Quantisation performs particularly badly on MobileNet
-    \item Weight pruning and channel pruning are roughly equivalent 
+    \item Channel pruning $>$ weight pruning
 \end{itemize}
     
 \vspace{0.5cm}
 \begin{figure}
     \centering
-    \includegraphics[width=\linewidth]{images/accuracies.pdf}
+    \includegraphics[width=1.08\linewidth]{images/accuracies.pdf}
 \end{figure}
     
 \end{frame}
 
 
 
-%% in case you forget, the plotting code with better colours is kept in scratchpad
-%% you need to update this before the presentation
-{ % all template changes are local to this group.
-    \setbeamertemplate{navigation symbols}{}
-    \begin{frame}[plain]
-        \begin{tikzpicture}[remember picture,overlay]
-            \node[at=(current page.center)] {
-                \includegraphics[width=\paperwidth]{images/plots.pdf}
-            };
-        \end{tikzpicture}
-     \end{frame}
-}
-
-
-
-
-
-
-
-
-
-
-
-\begin{frame}{Experiments}
+\begin{frame}{Impact of Compression on Speed}
     
-Show threading effect is the same on both devices 
-    
+    \begin{figure}
+        \centering
+        \includegraphics[width=\linewidth]{images/vgg_speedup.pdf}
+    \end{figure}
 \end{frame}
 
 
 
 
 
-
-
 \begin{frame}{Experiments}
 
-Show threading MobileNet slows it down.
+\begin{figure}
+    \centering
+    \includegraphics[width=\linewidth]{images/last_two.pdf}
+\end{figure}
     
 \end{frame}
 
@@ -692,21 +707,18 @@ Show threading MobileNet slows it down.
 \begin{frame}{Experiments}
     \begin{figure}
         \centering
-        \includegraphics[width=5cm]{images/inf-mem.pdf}
+        \includegraphics[width=\linewidth]{images/inf-mem2.pdf}
         \caption{Inference time with the maximum number of threads on the Odroid and Intel when sliced at 90\% accuracy.}
         \label{fig:inf-mem}
     \end{figure}
 \end{frame}
 
-
-
-\begin{frame}{Experiments}
+\begin{frame}{Parallelisation on ARM Mali GPU}
     
 
     \begin{figure}
         \centering
         \includegraphics[width=\linewidth]{images/Odroid-GPU.pdf}
-        \caption{Parallelising each network on the CPU and GPU of the Odroid board.}
         \label{fig:odroid-gpu}
     \end{figure}
     
@@ -714,35 +726,17 @@ Show threading MobileNet slows it down.
 
 
 
-
-
-
-
-
 \begin{frame}{Conclusion}
     
     \begin{itemize}
         \item Channel pruning is the best, always
+        \item FLOPs are \textbf{not} a perfect proxy for inference time
+        \item Acceleration patterns are both network \textbf{and} hardware dependent, so you must account for both sides of the stack when deploying deep networks 
     \end{itemize}
     
 \end{frame}
 
 
-\begin{frame}{Further work}
-\begin{itemize}
-    \item More comprehensive benchmarking 
-    \item Sparsity for robust networks
-    \item Different sparse formats 
-    \item Tuning parameters of direct convolution and im2col
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Thanks}
-    \begin{itemize}
-        \item Bonseyes
-        \item EPSRC (PPar)
-    \end{itemize}
-\end{frame}
 
 
 
